src/objects/AB2__AdBookAccountManagerRepType__c.object
<CustomObject>
    <description>AdBook Account Manager Contact Groups associated with an Account</description>
    <fields>
        <fullName>AB2__Account__c</fullName>
        <description>The Parent Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AdBook Account Manager Rep Types</relationshipLabel>
        <relationshipName>AdBookAccountManagerRepTypes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AB2__AdBookRepType__c</fullName>
        <description>The Manager Group (Rep Type) for the Account</description>
        <label>AdBook Manager Group</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>AdBook Rep Type must be marked IsAccountManagerRepType</errorMessage>
            <filterItems>
                <field>AB2__RepType__c.AB2__IsAccountManagerRepType__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AB2__RepType__c</referenceTo>
        <relationshipLabel>AdBook Account Manager Rep Types</relationshipLabel>
        <relationshipName>AdBookAccountManagerRepTypes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AB2__Uniqueness__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Concatenation of the Account ID and the Rep Type ID. 
Used to enforce uniqueness via a field workflow rule that will set the value.</description>
        <inlineHelpText>This field will be auto populated with the Account ID and Rep Type ID.</inlineHelpText>
        <label>Uniqueness</label>
        <length>37</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>AdBook Account Manager Rep Type</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>AdBook Account Manager Rep Type Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AdBook Account Manager Rep Types</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>